# Waffle

./: .build.sh  .editorconfig  .gitignore  .gitmodules  LICENSE.md  README.md  build.gradle  clean.sh  create_jre.sh  gradle.properties  main.rb  make_jre.sh  settings.gradle  test.sh  waffle.dia  waffle.dia~
docs/: index.html  index.md  project.html  quick.html  quick.md
docs/ja/: index.html  index.md
gems/specifications/: file-tail-1.2.0.gemspec  ruby2ruby-2.4.4.gemspec  ruby_parser-3.14.2.gemspec  sexp_processor-4.14.1.gemspec  sourcify-0.5.0.gemspec  sync-0.5.0.gemspec  tins-1.24.1.gemspec
gradle/wrapper/: gradle-wrapper.properties
lib/: extend_jdk.sh  openjdk-20.0.2_linux-x64_bin.tar.gz.REMOVED.git-id  openjdk.tar.gz.aa  openjdk.tar.gz.ab  openjdk.tar.gz.ac  openjdk.tar.gz.ad
old/: Hub.java
old/H1/: post.txt  test1.txt  timestamp.sh
old/HAPPY10000/: test1.txt  test10000.txt  timestamp.txt
old/a/: post.txt  pre.txt  test.txt
old/collector/: AbstractResultCollector.java  RubyResultCollector.java
old/conductor/: AbstractConductor.java  EmptyConductor.java  RubyConductor.java
old/extractor/: AbstractParameterExtractor.java  RubyParameterExtractor.java
old/run_old/: InclusiveRunNode.java  RunNode.java  SimulatorRun.java  (+1 more)
run_old/: AbstractRun.java
sub_project/waffle-servant/miniservant/src/: CMakeLists.txt  dirhash.cpp  dirhash.hpp  eventrec.cpp  eventrec.hpp  miniservant.cpp  miniservant.h  outproc.cpp  outproc.hpp  sha256.cpp  sha256.h  subprocess.hpp  taskexec.cpp  taskexec.hpp
user_manual/: .vimrc.local  build.sh  latexmkrc  main.tex
(+747 files in other folders)
